k8s-nginx-deployment/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: nginx-namespace

spec:
  type: NodePort
  selector:
    app: nginx

  ports:
  - port: 80
    targetPort: 80
